Delete User and other fixes
