# src/chats/chats.controller.ts
@@ -1,5 +1,5 @@
 import { JwtAuthGuard } from '@/auth/jwt-auth.guard';
-import { Controller, Get, Param, Post, Request, UseGuards, UseInterceptors } from '@nestjs/common';
+import { Body, Controller, Get, Param, Post, Request, UseGuards, UseInterceptors } from '@nestjs/common';
 import { ChatsService } from './chats.service';
 import { ApiOkResponse, ApiOperation, ApiTags } from '@nestjs/swagger';
 import { MessageEntity } from './entities/message.entity';
@@ -7,13 +7,15 @@ import { PaginatedRoute } from '@/pagination/pagination.decorator';
 import { PaginationInterceptor } from '@/pagination/pagination.interceptor';
 import { User } from '@prisma/client';
 import { ConversationEntity } from './entities/conversation.entity';
+import { CreateMessageDto } from './dto/create-message.dto';
+import { UsersService } from '@/users/users.service';
 
 @ApiTags('chats')
 @Controller('chats')
 @UseGuards(JwtAuthGuard)
 @UseInterceptors(PaginationInterceptor)
 export class ChatsController {
-	constructor(private service: ChatsService){}
+	constructor(private service: ChatsService, private users: UsersService){}
 
 	@Get(':conversationId')
 	@ApiOperation({ summary: 'Get all messages from a conversation' })
@@ -35,6 +37,19 @@ export class ChatsController {
 	){
 		const hasAConversation = await this.service.findPrivateConversation(req.user.id, +userId)
 		return hasAConversation || await this.service.createPrivateConversation(req.user.id, +userId);
+	}
+
+	@Post('send/:receiverId')
+	@ApiOperation({ summary: 'Send message with HTTP' })
+	@ApiOkResponse({ type: ConversationEntity })
+	async sendMessgae(
+		@Param('receiverId') receiverId: string,
+		@Request() req: { user: User },
+		@Body() messgae: CreateMessageDto
+	){
+    const isID = !isNaN(+receiverId);
+		const reciever = isID ? await this.users.findOne(+receiverId) : await this.users.findOneByUsername(receiverId);
+		return await this.service.sendPrivateMessage(req.user, reciever, messgae);
 	}
 	
 	@Get()
